Fixed the alignment issue

--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ h2 {
 }
 
 .text_align {
-  margin-left: -600px;
+  margin-left: -680px;
 }
 
 .pic_align {
